--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "jqvmap": "1.5.1",
     "moment": "^2.22.1",
     "moment-timezone": "0.4.0",
+    "ng-block-ui": "^2.1.7",
     "ng2-nouislider": "1.7.11",
     "ng2-select": "2.0.0",
     "ngx-chips": "1.9.2",
