--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@angular/platform-browser-dynamic": "6.0.2",
     "@angular/platform-server": "6.0.2",
     "@angular/router": "6.0.2",
+    "@candidosales/material-time-picker": "^2.0.0",
     "ajv": "6.3.0",
+    "amazing-time-picker": "^1.8.0",
     "angular-calendar": "0.23.1",
     "animate.css": "3.5.2",
     "arrive": "2.3.1",
@@ -59,6 +61,7 @@
     "ng2-select": "2.0.0",
     "ngx-chips": "1.9.2",
     "ngx-mat-select-search": "^1.8.0",
+    "ngx-material-timepicker": "^5.1.1",
     "nouislider": "9.2.0",
     "perfect-scrollbar": "1.1.0",
     "popper.js": "1.14.1",
