--- a/package.json
+++ b/package.json
@@ -46,12 +46,11 @@
     "core-js": "2.4.1",
     "datatables": "1.10.13",
     "datatables.net-bs": "1.10.16",
-    "datatables.net-responsive": "2.1.1",
+    "datatables.net-responsive": "^2.2.3",
     "fullcalendar": "3.4.0",
     "googleapis": "19.0.0",
     "hammerjs": "2.0.8",
     "jasny-bootstrap": "3.1.3",
-    "jquery": "3.2.1",
     "jquery-validation": "1.17.0",
     "jqvmap": "1.5.1",
     "moment": "^2.22.1",
@@ -81,7 +80,7 @@
     "@types/bootstrap": "3.3.32",
     "@types/chartist": "0.9.34",
     "@types/jasmine": "2.5.38",
-    "@types/jquery": "1.10.31",
+    "@types/jquery": "^1.10.31",
     "@types/node": "6.0.73",
     "codelyzer": "4.3.0",
     "jasmine-core": "2.5.2",
