--- a/angular.json
+++ b/angular.json
@@ -42,6 +42,7 @@
               "node_modules/nouislider/distribute/nouislider.min.js",
               "node_modules/bootstrap-select/dist/js/bootstrap-select.js",
               "node_modules/datatables/media/js/jquery.dataTables.js",
+              "node_modules/datatables.net/js/jquery.dataTables.js",
               "node_modules/datatables.net-bs/js/dataTables.bootstrap.js",
               "node_modules/datatables.net-responsive/js/dataTables.responsive.js",
               "node_modules/fullcalendar/dist/fullcalendar.js",
